adding marketsearch to notification
